# Writer

./: .dockerignore  .gitattributes  .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  Dockerfile.evolution  Dockerfile.executor  Dockerfile.frontend  Dockerfile.website  README.md  anti-ai-writing.md  docker-compose.yml  monitoring.db  nginx.conf  pyproject.toml  qd  start-all.ps1  start-dev.cmd  start-dev.ps1
backend/: Dockerfile.worker  IMAGE_AGENT.md  app.platform.core.db  layering_baseline.txt  pyproject.toml
backend/app/: main.py
backend/app/admin/: __init__.py
backend/app/auth/: __init__.py  bootstrap.py
backend/app/core/: checkpoint_pool.py  security.py  settings.py  style_store.py  thread_store.py
backend/app/create_type/: optimizer.py  router.py  schemas.py  store.py
backend/app/db/: __init__.py
backend/app/platform/: __init__.py
backend/app/routers/: __init__.py  character.py  context.py  internal.py  screenplay.py  threads.py
backend/app/schemas/: character.py  screenplay.py  style.py
backend/app/worker/: __init__.py  sandbox.py  server.py
backend/app/writer/: deepseek_thinking.py  meta_agent.py  models.py
backend/harnesses/1/: harness.py
backend/tests/: test_check_layering.py  test_goal_middleware.py  test_harness_assembly.py  test_harness_base.py  test_harness_equivalence.py  test_harness_router.py  test_harness_v1.py  test_image_domain.py  test_image_e2e.py  test_meta_readonly_middleware.py  test_path_guard_middleware.py  test_phase1_auth.py  test_phase2_isolation.py  test_phase4_admin.py  test_pipeline_subagents.py  test_provider_config.py  test_revision_limit_middleware.py  test_sandbox.py  test_storyline_graph.py  test_storyline_single_line_limit_middleware.py  test_thread_store.py  test_trace_middleware_interrupt.py  test_trace_projector.py  test_worker.py  test_writer_models.py
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: cache.rs  config.rs  lib.rs  state.rs  updater.rs
evolution/: .env.example  .env.production.example  docker-entrypoint.sh  pyproject.toml
evolution/app/: main.py  migrate_to_surface.py
evolution/app/adapt/: __init__.py  api.py  batch.py  events.py  graph.py  state.py  verifier.py
evolution/app/admin_proxy/: __init__.py  router.py
evolution/app/benchmark/: __init__.py  api.py  repo.py  runner.py
evolution/app/common/: __init__.py  evalset.py  events.py  flow_metrics.py  model_factory.py
evolution/app/compose/: __init__.py  git_ops.py
evolution/app/config/: api.py
evolution/app/core/: db.py  git_ops.py  internal_auth.py  llm.py  models.py  notify_auth.py  security.py  settings.py  sso_auth.py
evolution/app/dataset/: __init__.py  api.py  repo.py  revision.py
evolution/app/diagnosis/: calibrate.py  diagnosis.py  evaluation.py  judge.py  mining.py  rubric.py  rules.py  rules_engine.py
evolution/app/eval_agent/: __init__.py  agent.py  api.py  ctx.py  eval_extractor.py  prompt.py  repo.py  scoring.py
evolution/app/evolve/: __init__.py  agent.py  agent_model.py  api.py  ctx.py  db.py  docs.py  driver_prompt.py  evalset.py  evaluate.py  events.py  evolve_repo.py  execute.py  flow_metrics.py  guard.py  plan.py  prompt.py  runner.py  tools.py  verifier.py
evolution/app/harness_config/: __init__.py  bootstrap.py  class_ref.py  config.py  edits.py
evolution/app/improvement/: experiment.py  increment.py  manifest_publisher.py  manifest_repo.py  optimizer.py  package_proposer.py  pipeline.py  prompt_import.py  prompts.py  prompts_repo.py  proposer.py  replay.py  snapshot_api.py  snapshot_publisher.py  snapshot_repo.py  static_check.py  surface_api.py  surface_registry.py  surface_repo.py
evolution/app/ingestion/: chain_summary.py  importer.py  increment.py  ingestion.py  loader.py  projector.py  scan.py  user_sync.py
evolution/app/promote/: __init__.py  api.py  filter.py  judge.py  promote.py  repo.py  scheduler.py
evolution/app/reflection/: __init__.py  extractor.py  repo.py
evolution/app/tests/: __init__.py  api.py  repo.py
evolution/app/trace/: __init__.py  differ.py  increment.py  recorder.py  summary_export.py  trace_callback.py  trace_middleware.py
evolution/app/versioning/: __init__.py  config_diff.py  constants.py  elements_api.py  registry_repo.py  snapshot_api.py  snapshot_publisher.py  snapshot_repo.py  version_changes_repo.py
evolution/app/view/: active.py  agent_package.py  evaluation_api.py  sse_stream.py  stats.py  traces.py  users.py  versions_api.py
evolution/desktop/: index.html  package-lock.json  vite.config.ts
evolution/desktop/src/: App.tsx
evolution/desktop/src-tauri/: Cargo.toml  tauri.conf.json
evolution/frontend/: .gitignore  next.config.ts  package-lock.json  package.json
evolution/frontend/app/: globals.css  layout.tsx  page.tsx
evolution/frontend/components/: AppToaster.tsx  Markdown.tsx  StatusBadge.tsx  TopNav.tsx
evolution/frontend/hooks/: useTraceStream.ts
evolution/frontend/lib/: adapt-api.ts  adapt-types.ts  admin-api.ts  evolve-api.ts  harness-api.ts  (+4 more)
evolution/scripts/: backfill_version_changes.py
evolution/tests/: test_ab_stats.py  test_calibrate.py  test_eval_extractor_paths.py  test_evolve_smoke.py  test_increment_reconstruct.py  test_migration_phase2.py  test_mining.py  test_multistyle.py  test_prompts.py  test_static_check.py  test_surface_improvement_phase3.py  test_surface_phase1.py  test_switch_phase5.py
executor/: .env.production.example  Dockerfile.worker  IMAGE_AGENT.md  layering_baseline.txt  pyproject.toml
executor/app/: __init__.py  main.py
executor/tests/: test_a2_new_middleware.py  test_check_layering.py  test_goal_middleware.py  test_image_e2e.py  test_manifest_loader.py  test_meta_readonly_middleware.py  test_path_guard_middleware.py  test_pipeline_subagents.py  test_provider_config.py  test_revision_limit_middleware.py  test_storyline_graph.py  test_storyline_single_line_limit_middleware.py  test_style_injection.py  test_switch_phase5.py  test_thread_store.py  test_trace_increment.py  test_trace_middleware_interrupt.py  test_trace_projector.py  test_worker.py  test_writing_event_sink.py
(+701 files in other folders)
