[project]
name = "writer-evolution"
version = "0.1.0"
description = "Writer evolution 服务：trace 摄入、查询、宏观统计、规则标红"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.1",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
