[project]
name = "writer-executor"
version = "0.1.0"
description = "Minimal screenplay agent executor (执行端) powered by FastAPI and DeepAgents"
requires-python = ">=3.11"
dependencies = [
  "deepagents>=0.5.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.3.0",
  "langgraph>=0.2.0",
  "langgraph-checkpoint-sqlite>=2.0.0",
  "openai>=1.50.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.6.0",
  "python-docx>=1.1.2",
  "python-dotenv>=1.0.1",
  "reportlab>=4.2.0",
  "uvicorn[standard]>=0.32.0",
  "watchfiles>=0.21.0",
  "cryptography>=43.0.0",
  # ── NWM 记忆系统（去 Graphiti，自研叙事学类型化记忆）──
  "sqlite-vec>=0.1.6",          # 向量检索 SQLite 扩展（vec0 虚拟表）
  "pysqlite3-binary>=0.5.4",    # 带扩展加载能力的 SQLite（标准库 sqlite3 默认禁用 load_extension）
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

