[package]
name = "desktop"
version = "0.1.6"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP 中继（S4：全 Rust 中继，绕 WebView CORS/SameSite）
# cookie_provider + reqwest/stream 让 Client 自动管理 cookie jar，支持 SSE 流式
reqwest = { version = "0.12", features = ["json", "stream", "cookies", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
futures-util = "0.3"
url = "2"
# cookie 持久化：可序列化的 cookie jar，重启后从 Tauri Store 恢复 session（免重登）
cookie_store = "0.21"
cookie = "0.18"

